# libaesni

./: .gitignore  CMakeLists.txt  README.md
cmake/: PreventInSourceBuild.cmake
include/: iaesni.h
src/: iaes_asm_interface.h  iaesni.c  intel_aes.c
test/: test_libaesni.c
